fix: hover on buttons & arrows

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -70,7 +70,7 @@
           </li>
         </ul>
       </section>
-      </section>
+     </section>
     </header>
     <main>
       <section class="idea-info">
@@ -78,7 +78,7 @@
           <h2>Rappresent your idea with
             a smart Design</h2>
             <p>Tasks accompanying and related to programming include: testing, debugging, source code maintenance,
-               implementation of build systems, and management of derived artifacts, such as the machine code of computer programs. </p>
+               <span>implementation of build systems,</span> and management of derived artifacts, such as the machine code of computer programs. </p>
                <button>GET STARTED</button>
         </article>
         <article class="idea-info_img">
@@ -100,7 +100,11 @@
               <path d="M7.65685 1.34314L2 6.99999L7.65685 12.6568" stroke="#373737" stroke-width="2"/>
               </svg>
               </div>
-              <div class="arrow-num"><span>1</span><span>/</span><span>5</span></div>
+              <div class="arrow-num">
+                <span>1</span>
+                <span>/</span>
+                <span>5</span>
+              </div>
               <div class="arrow-right arr">
                 <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.34314 1.34314L6.99999 6.99999L1.34314 12.6568" stroke="#373737" stroke-width="2"/>
