feat:update calculator

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -17,10 +17,9 @@
         </div>
         <button class="ac">AC</button>
         <button class="del">DEL</button>
-        <button class="calc-num" value="^">^</button>
+        <button class="calc-num exp" value="^">^</button>
         <button class="square" value="√">√</button>
         <button class="calc-num" value="-">-</button>
-        <!-- <button class="calc-num" value=".">+/-</button> -->
         <button class="calc-num" value="/">÷</button>
         <button class="calc-num" value="1">1</button>
         <button class="calc-num" value="2">2</button>
