--- a/Virtual keyboard/index.html
+++ b/Virtual keyboard/index.html
@@ -7,6 +7,7 @@
     <title>Virtual Keyboard</title>
   </head>
   <body id="body">
-    <script src="script.js"></script>
+    <script type="module" src="data.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
